noinst_HEADERS          += idsp/lfq/impl/addr_hddn.h   \
                           idsp/lfq/impl/grp_msg.h     \
                           idsp/lfq/impl/pmp.h         \
                           idsp/lfq/impl/pmp_msg.h     \
                           idsp/lfq/impl/rpc_hddn.h    \
                           idsp/lfq/impl/grp_hddn.h    \
                           idsp/lfq/impl/grp_sk.h      \
                           idsp/lfq/impl/pmp_cfg.h     \
                           idsp/lfq/impl/pmp_hddn.h    \
                           idsp/lfq/impl/pmp_sk.h      \
                           idsp/lfq/impl/xpn.h

lib_libazqmpi_a_SOURCES += idsp/lfq/impl/azq.c         \
                           idsp/lfq/impl/com.c         \
                           idsp/lfq/impl/grp.c         \
                           idsp/lfq/impl/grp_skeleton.c\
                           idsp/lfq/impl/grp_stub.c    \
                           idsp/lfq/impl/opr.c         \
                           idsp/lfq/impl/pmp.c         \
                           idsp/lfq/impl/pmp_skeleton.c\
                           idsp/lfq/impl/pmp_stub.c    \
                           idsp/lfq/impl/rpc.c         \
                           idsp/lfq/impl/rpq.c         \
                           idsp/lfq/impl/rqst.c        \
                           idsp/lfq/impl/mbx.c         \
                           idsp/lfq/impl/thr.c         \
                           idsp/lfq/impl/util.c        \
                           idsp/lfq/impl/s_sync.c      \
                           idsp/lfq/impl/r_sync.c      \
                           idsp/lfq/impl/s_async.c     \
                           idsp/lfq/impl/r_async.c     \
                           idsp/lfq/impl/prst.c        \
                           idsp/lfq/impl/cancel.c      \
                           idsp/lfq/impl/aprobe.c      \
                           idsp/lfq/impl/probe.c       \
                           idsp/lfq/impl/wait.c        \
                           idsp/lfq/impl/waitall.c     \
                           idsp/lfq/impl/waitany.c     \
                           idsp/lfq/impl/waitsome.c    \
                           idsp/lfq/impl/test.c        \
                           idsp/lfq/impl/testany.c     \
                           idsp/lfq/impl/testall.c     \
                           idsp/lfq/impl/testsome.c    \
                           idsp/lfq/impl/timer.c       \
                           idsp/lfq/impl/wait_blk.c    \
                           idsp/lfq/impl/rpc_com.c     \
                           idsp/lfq/impl/stack.c       \
                           idsp/lfq/impl/dlq.c
