lib_libazqmpi_a_HEADERS += idsp/lfq/spec/addr.h        \
                           idsp/lfq/spec/azq.h         \
                           idsp/lfq/spec/azq_types.h   \
                           idsp/lfq/spec/com.h         \
                           idsp/lfq/spec/dlq.h         \
                           idsp/lfq/spec/grp.h         \
                           idsp/lfq/spec/opr.h         \
                           idsp/lfq/spec/rpc.h         \
                           idsp/lfq/spec/rqst.h        \
                           idsp/lfq/spec/thr_dptr.h    \
                           idsp/lfq/spec/thr.h         \
                           idsp/lfq/spec/timer.h       \
                           idsp/lfq/spec/stack.h       \
                           idsp/lfq/spec/util.h        \
                           idsp/lfq/spec/fbox.h        \
                           idsp/lfq/spec/mbx.h         \
                           idsp/lfq/spec/rpq.h         \
                           idsp/lfq/spec/lfq.h         \
                           idsp/lfq/spec/atomic.h
