noinst_HEADERS          += azqmpi/src/bindings/f77/f_util.h         \
                           azqmpi/src/bindings/f77/f_proto.h

lib_libazqmpi_a_SOURCES += azqmpi/src/bindings/f77/f_util.c         \
                           azqmpi/src/bindings/f77/f_init.c         \
                           azqmpi/src/bindings/f77/f_finalize.c     \
                           azqmpi/src/bindings/f77/f_comm_rank.c    \
                           azqmpi/src/bindings/f77/f_comm_size.c    \
                           azqmpi/src/bindings/f77/f_send.c         \
                           azqmpi/src/bindings/f77/f_recv.c         \
                           azqmpi/src/bindings/f77/f_barrier.c      \
                           azqmpi/src/bindings/f77/f_bcast.c        \
                           azqmpi/src/bindings/f77/f_wtick.c        \
                           azqmpi/src/bindings/f77/f_wtime.c        \
                           azqmpi/src/bindings/f77/f_isend.c        \
                           azqmpi/src/bindings/f77/f_irecv.c        \
                           azqmpi/src/bindings/f77/f_wait.c         \
                           azqmpi/src/bindings/f77/f_waitall.c      \
                           azqmpi/src/bindings/f77/f_alltoall.c     \
                           azqmpi/src/bindings/f77/f_alltoall_v.c   \
                           azqmpi/src/bindings/f77/f_reduce.c       \
                           azqmpi/src/bindings/f77/f_allreduce.c    \
                           azqmpi/src/bindings/f77/f_comm_dup.c     \
                           azqmpi/src/bindings/f77/f_comm_split.c   \
                           azqmpi/src/bindings/f77/f_comm_free.c    \
                           azqmpi/src/bindings/f77/f_type_size.c    \
                           azqmpi/src/bindings/f77/f_abort.c
